force-app/main/default/objects/Contrato_Aceptado__c/Contrato_Aceptado__c.object-meta.xml
<CustomObject>
    <label>Contrato Aceptado</label>
    <nameField>
        <displayFormat>C-{0000000000}</displayFormat>
        <label>Número de Contrato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contratos Aceptados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>