force-app/main/default/objects/Contrato_Aceptado__c/fields/Acepto_Condiciones_de_Portal_Autogestion__c.field-meta.xml
<CustomField>
    <fullName>Acepto_Condiciones_de_Portal_Autogestion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Acepto Condiciones de Portal de Autogestión</description>
    <inlineHelpText>Acepto Condiciones de Portal de Autogestión</inlineHelpText>
    <label>Acepto Condiciones de Portal Autogestión</label>
    <type>Checkbox</type>
</CustomField>