force-app/main/default/objects/Contrato_Aceptado__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nombre del Cliente</description>
    <inlineHelpText>Nombre del Cliente</inlineHelpText>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratos Aceptados</relationshipLabel>
    <relationshipName>Contratos_Aceptados</relationshipName>
    <type>Lookup</type>
</CustomField>