force-app/main/default/objects/Contrato_Aceptado__c/fields/Fecha_acepta_contrato__c.field-meta.xml
<CustomField>
    <fullName>Fecha_acepta_contrato__c</fullName>
    <description>Fecha de Aceptación de Contrato</description>
    <inlineHelpText>Fecha de Aceptación de Contrato</inlineHelpText>
    <label>Fecha de Aceptación de Contrato</label>
    <type>DateTime</type>
</CustomField>